[gd_scene load_steps=9 format=3 uid="uid://b13e8ex60e6jg"]

[ext_resource type="Script" uid="uid://u2rkotdi53y" path="res://script/niveles.gd" id="1_xixph"]
[ext_resource type="Texture2D" uid="uid://dwfqj8hbhlh3t" path="res://backgrounds/bg1.tres" id="2_imf2o"]
[ext_resource type="FontFile" uid="uid://bpq8k3mg0yvnx" path="res://fuente/Daydream DEMO.otf" id="3_cpb1v"]
[ext_resource type="Texture2D" uid="uid://famx87h7dicl" path="res://backgrounds/blankbutton.png" id="4_i4tc2"]

[sub_resource type="FontVariation" id="FontVariation_t08yv"]
base_font = ExtResource("3_cpb1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a6518"]
texture = ExtResource("4_i4tc2")
expand_margin_left = 30.0
expand_margin_top = 40.0
expand_margin_right = 30.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kql2t"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_shcvx"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[node name="niveles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xixph")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0.10980392, 0.16862746, 0.14117648, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.5019608, 0.5019608, 0.5019608, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_imf2o")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -176.5
offset_right = 252.0
offset_bottom = 176.5
grow_vertical = 2
theme_override_constants/separation = 118

[node name="BotonNivel1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kql2t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kql2t")
text = "Level 1
"

[node name="BotonNivel2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kql2t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kql2t")
text = "Level 2
"

[node name="BotonNivel3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kql2t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kql2t")
text = "Level 3"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -176.5
offset_right = -50.0
offset_bottom = 176.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 118

[node name="BotonNivel4" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_shcvx")
text = "Level 4
"

[node name="BotonNivel5" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_shcvx")
text = "Level 5
"

[node name="BotonNivel6" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_shcvx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_shcvx")
text = "Level 6"

[node name="VBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -89.0
offset_right = 197.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 118

[node name="back" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/focus = SubResource("StyleBoxTexture_a6518")
text = "back"

[node name="fight" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_a6518")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_a6518")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_a6518")
theme_override_styles/focus = SubResource("StyleBoxTexture_a6518")
text = "fight
"

[connection signal="pressed" from="VBoxContainer/BotonNivel1" to="." method="_on_BotonNivel1_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonNivel2" to="." method="_on_BotonNivel2_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonNivel3" to="." method="_on_BotonNivel3_pressed"]
[connection signal="pressed" from="VBoxContainer3/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer3/fight" to="." method="_on_fight_pressed"]
